# prius_av

./: .gitignore  README.md  enter.sh  merge_compile_commands.sh  prius_av.repos  run.sh
docker/: Dockerfile  apt-packages  bashrc-git-prompt  build.sh  entrypoint  pip3-packages
src/prius_control/: CMakeLists.txt  package.xml
src/prius_control/cfg/: pid.cfg
src/prius_control/include/prius_control/: collector.h  control.h  pid.h  state.h  velocity_pid.h  velocity_pid_tune.h  visualizer.h
src/prius_control/launch/: prius_av.launch  tune_pid.launch
src/prius_control/src/: collector.cpp  control.cpp  pid.cpp  state.cpp  velocity_pid.cpp  velocity_pid_tune.cpp  visualizer.cpp
src/prius_tools/: CMakeLists.txt  package.xml
src/prius_tools/models/speed_limit_sign_100/: model.sdf
src/prius_tools/models/speed_limit_sign_100/meshes/: speed_limit_sign.dae
src/prius_tools/models/speed_limit_sign_20/: model.sdf
src/prius_tools/models/speed_limit_sign_20/meshes/: speed_limit_sign.dae
src/prius_tools/models/speed_limit_sign_70/: model.sdf
src/prius_tools/models/speed_limit_sign_70/meshes/: speed_limit_sign.dae
src/prius_tools/models/speed_limit_sign_80/: model.sdf
src/prius_tools/models/speed_limit_sign_80/meshes/: speed_limit_sign.dae
src/prius_tools/scripts/: map_creator
src/prius_tools/worlds/: custom.world  custom_backup.world  layout_custom.xml  road.xml  signs.world
src/prius_vision/: CMakeLists.txt  package.xml
src/prius_vision/params/: prius.yaml
src/prius_vision/scripts/: control_prediction  control_train.py  sign_detection  sign_recognition  sign_recognition_train.py
src/prius_vision/scripts/yolov3_tf2/: dataset.py  models.py
