<?xml version="1.0"?>
<package format="3">
  <name>prius_tools</name>
  <version>0.0.1</version>
  <description>The prius_tools package</description>
  <author email="amadeuszszymko@gmail.com">Amadeusz Szymko</author>
  <maintainer email="amadeuszszymko@gmail.com">Amadeusz Szymko</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python3-tk</exec_depend>

</package>
