<?xml version="1.0"?>
<package format="3">
  <name>prius_vision</name>
  <version>0.0.1</version>
  <description>The prius_vision package</description>
  <author email="amadeuszszymko@gmail.com">Amadeusz Szymko</author>
  <maintainer email="amadeuszszymko@gmail.com">Amadeusz Szymko</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>prius_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python-tensorflow-gpu-pip</exec_depend>

</package>
